# bmi-example-cxx

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: test.yml
heat/: CMakeLists.txt  bmi_heat.cxx  bmi_heat.hxx  bmi_main.cxx  bmiheatcxx.pc.cmake  heat.cxx  heat.hxx  heatcxx.pc.cmake
testing/: CMakeLists.txt  config.txt  grid_info_test.cxx  irf_test.cxx  test_conflicting_instances.cxx  test_get_value.cxx  test_grid_info.cxx  test_initialize_from_file.cxx  test_irf.cxx  test_print_var_names.cxx  test_reinitialize.cxx  test_set_value.cxx  test_time.cxx
